Добавлен функционал бронирования и отзывав